# ttldict

./: README.md  pyproject.toml
ttldict/: __init__.py
